2016-08-04
    Добавил на админку версию игры взятую из билда мейвена
    Зарелизил версию 1.0.10
2016-08-13
    Сделал возможным использовать две базы: postgresql и sqlite. Первая нужна для продакшена, вторая нормально будет для запуска на локали. Базы переключаются путем подмены applicationContext-database.
    Исправил некоторые ошибки с подвисанием при использовании sqlite во время рикординга игры.
    Выделил в properties коннекшен к базе данных
    Игры во всех списках посортированы по алфавиту
2016-08-14
    Добавил контроллер для сохранения специфических для игры данных - настроек
2016-08-15
    Зарелизил версию 1.0.11
2016-08-26
    Сделал возможным указывать порядок спрайтов к отрисовке в многослойном режиме
2016-08-29
    Изменил алгоритм загрузки спрайтов, теперь инфа грузится через ajax
    Добавил загрузку контекста через ajax
    Добавил загрузку информации об игре через ajax
    Добавил проверку регистрации пользователя через ajax
    Релизовал загрузку списка юзеров через ajax, от jsp не остается и следа! Подключил новую либину, для работы с html темплейтами через jQuery
    Замахнулся на форму регистрации, но то еще тот кусок. Оставил на потом. Хватит уже, я сегодня хотел только померджить в мастер немного :) Зато чуть скрипты поправил, была бага с либами
    Сделал так, чтобы не рифрешислась страничка при добавлении нового пользователя, а только обновлялся контент
    Сделал, чтобы удаление и добавление пользователя не приводило к перезагрезке всей борды
    Админка теперь не сохраняет в url браузера последнее действие
    Добавил возможность менять набор спрайтов как тему игры
    Зарелизил версию 1.0.12
2016-09-22
    Реализовал возможность в клиенте работать с несколькими слоями борды
    Зарелизил версию 1.0.13
2016-09-30
    Исправил глюк с /n при построении борды
    Сделал так, чтобы состояние борды приходило как полноценный JSON а не JSON строки в другом JSON - из за чего приходилось парсить дополнительно на клиенте.