@@ -98,3 +98,4 @@
 2016-09-30
     Исправил глюк с /n при построении борды
     Сделал так, чтобы состояние борды приходило как полноценный JSON а не JSON строки в другом JSON - из за чего приходилось парсить дополнительно на клиенте.
+    Сделал более читабельное сохранение дат в таблицы обоих типов (PostgreSQL и SQLite), что привело к тому что чаты не сохраняются многократно (пофиксил багу)
